--- a/profile.html
+++ b/profile.html
@@ -543,7 +543,7 @@
     <!-- Navbar -->
     <nav class="navbar" id="navbar">
         <div class="navbar__container">
-            <a href="preview.html" class="navbar__logo">
+            <a href="preview.html#hero" class="navbar__logo">
                 <span class="navbar__logo-text" id="clock-display"
                     style="font-family: 'Orbitron', monospace; font-variant-numeric: tabular-nums; letter-spacing: 2px;">0000.00.00
                     00:00:00</span>
@@ -552,7 +552,8 @@
             <ul class="navbar__links">
                 <li><a href="preview.html#hero" class="navbar__link">TOP</a></li>
                 <li><a href="preview.html#philosophy" class="navbar__link">PHILOSOPHY</a></li>
-                <li><a href="profile.html" class="navbar__link" style="color: var(--accent-cyan);">ABOUT ME</a></li>
+                <li><a href="preview.html#about" class="navbar__link" style="color: var(--accent-cyan);">ABOUT ME</a>
+                </li>
                 <li><a href="preview.html#works" class="navbar__link">WORKS</a></li>
             </ul>
         </div>
@@ -588,7 +589,7 @@
                 <div class="profile-name-area">
                     <div class="profile-name-jp">間野 龍心</div>
                     <div class="profile-name-en">Ryushin Mano</div>
-                    <p class="profile-job">Effect Designer / VFX Artist</p>
+                    <p class="profile-job">Effect Designer</p>
                 </div>
 
                 <!-- Biography / Basic Info Section -->
