--- a/works_others.html
+++ b/works_others.html
@@ -1121,15 +1121,17 @@
     <!-- Navbar -->
     <nav class="navbar" id="navbar">
         <div class="navbar__container">
-            <a href="preview.html" class="navbar__logo">
+            <a href="preview.html#hero" class="navbar__logo">
                 <span class="navbar__logo-text" id="clock-display"
                     style="font-family: 'Orbitron', monospace; font-variant-numeric: tabular-nums; letter-spacing: 2px;">0000.00.00
                     00:00:00</span>
                 <span class="navbar__logo-dot"></span>
             </a>
             <ul class="navbar__links">
-                <li><a href="preview.html" class="navbar__link">TOP</a></li>
-                <!-- Other links can point back to home sections or stay if global -->
+                <li><a href="preview.html#hero" class="navbar__link">TOP</a></li>
+                <li><a href="preview.html#philosophy" class="navbar__link">PHILOSOPHY</a></li>
+                <li><a href="preview.html#about" class="navbar__link">ABOUT ME</a></li>
+                <li><a href="preview.html#works" class="navbar__link">WORKS</a></li>
             </ul>
         </div>
     </nav>
