Update back button to 'BACK TO GAME EFFECTS LIST' and link to works_vfx.html

--- a/works_detail_cute_beam.html
+++ b/works_detail_cute_beam.html
@@ -2192,7 +2192,7 @@
                 <p
                     style="color: var(--text-muted); margin-bottom: 30px; font-family: var(--font-display); font-size: 2rem; letter-spacing: 0.1em; font-weight: 700;">
                     To be Add</p>
-                <a href="preview.html#works" class="back-btn" style="
+                <a href="works_vfx.html" class="back-btn" style="
                         display: inline-block;
                         padding: 12px 40px;
                         background: transparent;
@@ -2206,7 +2206,7 @@
                     "
                     onmouseover="this.style.background='rgba(0, 240, 255, 0.1)'; this.style.boxShadow='0 0 15px rgba(0, 240, 255, 0.3)';"
                     onmouseout="this.style.background='transparent'; this.style.boxShadow='none';">
-                    BACK TO LIST
+                    BACK TO GAME EFFECTS LIST
                 </a>
             </div>
             </div>
