Update back button text to 'BACK TO WORKS' in works_vfx.html

--- a/works_vfx.html
+++ b/works_vfx.html
@@ -1264,7 +1264,7 @@
                         transition: all 0.3s ease;
                     " onmouseover="this.style.background='rgba(0, 240, 255, 0.1)'; this.style.boxShadow='0 0 15px rgba(0, 240, 255, 0.3)';"
                         onmouseout="this.style.background='transparent'; this.style.boxShadow='none';">
-                        BACK TO LIST
+                        BACK TO WORKS
                     </a>
                 </div>
             </div>
