--- a/works_detail_cute_beam.html
+++ b/works_detail_cute_beam.html
@@ -2258,10 +2258,18 @@
                 if (targetId === '#') return; // 空リンク対策
                 const targetElement = document.querySelector(targetId);
                 if (targetElement) {
-                    targetElement.scrollIntoView({
-                        behavior: 'smooth',
-                        block: 'center'
-                    });
+                    const header = targetElement.querySelector('h2, h3');
+                    if (header) {
+                        header.scrollIntoView({
+                            behavior: 'smooth',
+                            block: 'center'
+                        });
+                    } else {
+                        targetElement.scrollIntoView({
+                            behavior: 'smooth',
+                            block: 'center'
+                        });
+                    }
                 }
             });
         });
