Move TOC to left side and separate footer

--- a/works_detail_cute_beam.html
+++ b/works_detail_cute_beam.html
@@ -1267,6 +1267,25 @@
                 <h2 class="section-title" id="page-title">Game Effects Works</h2>
 
                 <div class="content-wrapper">
+                    <aside class="sidebar-toc">
+                        <h3 class="sidebar-toc__title">CONTENTS</h3>
+                        <ul class="sidebar-toc__list">
+                            <li class="sidebar-toc__item"><a href="#workflow" class="sidebar-toc__link">Workflow</a>
+                            </li>
+                            <li class="sidebar-toc__item"><a href="#settings" class="sidebar-toc__link">Settings</a>
+                            </li>
+                            <li class="sidebar-toc__item"><a href="#reference" class="sidebar-toc__link">Reference</a>
+                            </li>
+                            <li class="sidebar-toc__item"><a href="#storyboard" class="sidebar-toc__link">Storyboard</a>
+                            </li>
+                            <li class="sidebar-toc__item"><a href="#rough-design" class="sidebar-toc__link">Rough
+                                    Design</a></li>
+                            <li class="sidebar-toc__item"><a href="#mesh" class="sidebar-toc__link">Mesh</a></li>
+                            <li class="sidebar-toc__item"><a href="#texture" class="sidebar-toc__link">Texture</a></li>
+                            <li class="sidebar-toc__item"><a href="#points" class="sidebar-toc__link">Points</a></li>
+                        </ul>
+                    </aside>
+
                     <div class="main-content">
                         <div class="works-detail" style="max-width: 900px; margin: 0 auto; color: var(--text-primary);">
 
@@ -2296,43 +2315,32 @@
 
                     </div>
 
-                    <div style="margin-top: 80px; text-align: center;">
-                        <p
-                            style="color: var(--text-muted); margin-bottom: 30px; font-family: var(--font-display); font-size: 2rem; letter-spacing: 0.1em; font-weight: 700;">
-                            To be Add</p>
-                        <a href="works_vfx.html" class="back-btn" style="
-                        display: inline-block;
-                        padding: 12px 40px;
-                        background: transparent;
-                        border: 1px solid var(--accent-cyan);
-                        color: var(--accent-cyan);
-                        text-decoration: none;
-                        font-family: var(--font-display);
-                        text-transform: uppercase;
-                        letter-spacing: 2px;
-                        transition: all 0.3s ease;
-                    " onmouseover="this.style.background='rgba(0, 240, 255, 0.1)'; this.style.boxShadow='0 0 15px rgba(0, 240, 255, 0.3)';"
-                            onmouseout="this.style.background='transparent'; this.style.boxShadow='none';">
-                            BACK TO GAME EFFECTS LIST
-                        </a>
-                    </div>
                 </div>
+            </div>
 
-                <aside class="sidebar-toc">
-                    <h3 class="sidebar-toc__title">CONTENTS</h3>
-                    <ul class="sidebar-toc__list">
-                        <li class="sidebar-toc__item"><a href="#workflow" class="sidebar-toc__link">Workflow</a></li>
-                        <li class="sidebar-toc__item"><a href="#settings" class="sidebar-toc__link">Settings</a></li>
-                        <li class="sidebar-toc__item"><a href="#reference" class="sidebar-toc__link">Reference</a></li>
-                        <li class="sidebar-toc__item"><a href="#storyboard" class="sidebar-toc__link">Storyboard</a>
-                        </li>
-                        <li class="sidebar-toc__item"><a href="#rough-design" class="sidebar-toc__link">Rough Design</a>
-                        </li>
-                        <li class="sidebar-toc__item"><a href="#mesh" class="sidebar-toc__link">Mesh</a></li>
-                        <li class="sidebar-toc__item"><a href="#texture" class="sidebar-toc__link">Texture</a></li>
-                        <li class="sidebar-toc__item"><a href="#points" class="sidebar-toc__link">Points</a></li>
-                    </ul>
-                </aside>
+            <!-- Footer Section (Moved from inside works-detail) -->
+            <div style="margin-top: 80px; text-align: center;">
+                <p
+                    style="color: var(--text-muted); margin-bottom: 30px; font-family: var(--font-display); font-size: 2rem; letter-spacing: 0.1em; font-weight: 700;">
+                    To be Add</p>
+                <a href="works_vfx.html" class="back-btn" style="
+                            display: inline-block;
+                            padding: 12px 40px;
+                            background: transparent;
+                            border: 1px solid var(--accent-cyan);
+                            color: var(--accent-cyan);
+                            text-decoration: none;
+                            font-family: var(--font-display);
+                            text-transform: uppercase;
+                            letter-spacing: 2px;
+                            transition: all 0.3s ease;
+                        "
+                    onmouseover="this.style.background='rgba(0, 240, 255, 0.1)'; this.style.boxShadow='0 0 15px rgba(0, 240, 255, 0.3)';"
+                    onmouseout="this.style.background='transparent'; this.style.boxShadow='none';">
+                    BACK TO GAME EFFECTS LIST
+                </a>
+            </div>
+
             </div>
             </div>
         </section>
