Implement circular scroll-to-top button

--- a/works_detail_cute_beam.html
+++ b/works_detail_cute_beam.html
@@ -2441,6 +2441,65 @@
             });
         });
     </script>
+    <!-- Scroll to Top Button -->
+    <button id="scrollTopBtn" class="scroll-top-btn" aria-label="Scroll to top">
+        <span class="arrow-up"></span>
+    </button>
+
+    <style>
+        .scroll-top-btn {
+            position: fixed;
+            bottom: 30px;
+            right: 30px;
+            width: 50px;
+            height: 50px;
+            border-radius: 50%;
+            background: rgba(18, 18, 18, 0.8);
+            backdrop-filter: blur(10px);
+            border: 1px solid rgba(255, 255, 255, 0.1);
+            color: var(--accent-cyan);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            cursor: pointer;
+            z-index: 100;
+            transition: all 0.3s ease;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.5);
+        }
+
+        .scroll-top-btn:hover {
+            background: rgba(0, 240, 255, 0.1);
+            border-color: var(--accent-cyan);
+            box-shadow: 0 0 20px rgba(0, 240, 255, 0.4);
+            transform: translateY(-3px);
+        }
+
+        .arrow-up {
+            width: 12px;
+            height: 12px;
+            border-top: 2px solid var(--accent-cyan);
+            border-left: 2px solid var(--accent-cyan);
+            transform: rotate(45deg);
+            margin-top: 4px;
+            /* Optically center the arrow */
+        }
+    </style>
+
+    <script>
+        // Scroll to Top Logic
+        const scrollTopBtn = document.getElementById('scrollTopBtn');
+
+        scrollTopBtn.addEventListener('click', () => {
+            window.scrollTo({
+                top: 0,
+                behavior: 'smooth'
+            });
+        });
+
+        // Optional: Hide/Show based on scroll if desired, but user said "Always visible"
+        // keeping it always visible for now as requested.
+    </script>
+
     <script src="js/heart-cursor.js"></script>
 </body>
 
