Update Game Effects Works list: Remove items and set Coming Soon

--- a/works_vfx.html
+++ b/works_vfx.html
@@ -1199,52 +1199,22 @@
                     </article>
                     <article class="works__card" data-category="vfx">
                         <div class="works__card-image">
-                            <img src="https://picsum.photos/seed/vfx2/400/300" alt="魔法陣エフェクト">
-                            <div class="works__card-overlay">
-                                <span class="works__card-view">View Project</span>
+                            <!-- Placeholder image for coming soon -->
+                            <img src="https://picsum.photos/seed/vfx2/400/300" alt="魔法陣エフェクト"
+                                style="filter: grayscale(100%); opacity: 0.7;">
+                            <div class="works__card-overlay" style="opacity: 1; background: rgba(0,0,0,0.7);">
+                                <span class="works__card-view"
+                                    style="border-color: var(--text-muted); color: var(--text-muted); box-shadow: none;">Coming
+                                    Soon...</span>
                             </div>
                         </div>
                         <div class="works__card-content">
 
-                            <h3 class="works__card-title">魔法陣エフェクト</h3>
+                            <h3 class="works__card-title" style="color: var(--text-muted);">魔法陣エフェクト</h3>
                             <p class="works__card-description">ファンタジー系スキルエフェクト</p>
                             <div class="works__card-tags">
                                 <span class="works__card-tag">Unreal Engine</span>
                                 <span class="works__card-tag">Niagara</span>
-                            </div>
-                        </div>
-                    </article>
-                    <article class="works__card" data-category="vfx">
-                        <div class="works__card-image">
-                            <img src="https://picsum.photos/seed/vfx3/400/300" alt="パーティクルシステム">
-                            <div class="works__card-overlay">
-                                <span class="works__card-view">View Project</span>
-                            </div>
-                        </div>
-                        <div class="works__card-content">
-
-                            <h3 class="works__card-title">パーティクルシステム</h3>
-                            <p class="works__card-description">汎用パーティクルライブラリ</p>
-                            <div class="works__card-tags">
-                                <span class="works__card-tag">Unity</span>
-                                <span class="works__card-tag">Shader Graph</span>
-                            </div>
-                        </div>
-                    </article>
-                    <article class="works__card" data-category="vfx">
-                        <div class="works__card-image">
-                            <img src="https://picsum.photos/seed/vfx4/400/300" alt="炎・煙エフェクト">
-                            <div class="works__card-overlay">
-                                <span class="works__card-view">View Project</span>
-                            </div>
-                        </div>
-                        <div class="works__card-content">
-
-                            <h3 class="works__card-title">炎・煙エフェクト</h3>
-                            <p class="works__card-description">EmberGenを使用した流体シミュレーション</p>
-                            <div class="works__card-tags">
-                                <span class="works__card-tag">EmberGen</span>
-                                <span class="works__card-tag">After Effects</span>
                             </div>
                         </div>
                     </article>
