Refine Magic Circle card: Simplify to Coming Soon

--- a/works_vfx.html
+++ b/works_vfx.html
@@ -1208,14 +1208,10 @@
                                     Soon...</span>
                             </div>
                         </div>
-                        <div class="works__card-content">
-
-                            <h3 class="works__card-title" style="color: var(--text-muted);">魔法陣エフェクト</h3>
-                            <p class="works__card-description">ファンタジー系スキルエフェクト</p>
-                            <div class="works__card-tags">
-                                <span class="works__card-tag">Unreal Engine</span>
-                                <span class="works__card-tag">Niagara</span>
-                            </div>
+                        <div class="works__card-content"
+                            style="display: flex; justify-content: center; align-items: center; min-height: 100px;">
+                            <h3 class="works__card-title" style="color: var(--text-muted); font-size: 1rem; margin: 0;">
+                                Coming Soon...</h3>
                         </div>
                     </article>
                 </div>
