--- a/works_others.html
+++ b/works_others.html
@@ -1177,24 +1177,12 @@
             <div class="container">
                 <h2 class="section-title" id="page-title">OTHER WORKS</h2>
 
-                <div class="works__grid" id="works-container">
-                    <article class="works__card" data-category="others">
-                        <div class="works__card-image">
-                            <img src="https://picsum.photos/seed/other1/400/300" alt="コンセプトアート">
-                            <div class="works__card-overlay">
-                                <span class="works__card-view">View Project</span>
-                            </div>
-                        </div>
-                        <div class="works__card-content">
-                            <span class="works__card-category">Others</span>
-                            <h3 class="works__card-title">コンセプトアート</h3>
-                            <p class="works__card-description">エフェクトのコンセプトスケッチ</p>
-                            <div class="works__card-tags">
-                                <span class="works__card-tag">Photoshop</span>
-                                <span class="works__card-tag">Procreate</span>
-                            </div>
-                        </div>
-                    </article>
+                <div class="works__grid" id="works-container"
+                    style="display: flex; justify-content: center; align-items: center; min-height: 200px;">
+                    <p
+                        style="font-family: var(--font-display); font-size: 1.5rem; color: var(--text-muted); letter-spacing: 0.1em;">
+                        COMING SOON...
+                    </p>
                 </div>
 
                 <div style="margin-top: 80px; text-align: center;">
