Replace SNS links with YouTube button in About Me section

--- a/profile.html
+++ b/profile.html
@@ -569,17 +569,10 @@
 
                 <!-- SNS Links -->
                 <div class="profile-socials" style="margin-top: 20px;">
-                    <a href="#" class="profile-social-link">
-                        <span class="profile-social-icon">X</span>
-                        <span class="profile-social-id">@Ryushin_VFX</span>
-                    </a>
-                    <a href="#" class="profile-social-link">
-                        <span class="profile-social-icon">Ig</span>
-                        <span class="profile-social-id">@ryushin_mano</span>
-                    </a>
-                    <a href="#" class="profile-social-link">
-                        <span class="profile-social-icon">As</span>
-                        <span class="profile-social-id">Ryushin Mano</span>
+                    <a href="https://www.youtube.com/@CanopuS_create" class="profile-social-link" target="_blank"
+                        rel="noopener noreferrer">
+                        <span class="profile-social-icon" style="color: #FF0000;">▶</span>
+                        <span class="profile-social-id">YouTube Channel</span>
                     </a>
                 </div>
             </div>
