Replace Roadmap content with Coming Soon in profile

--- a/profile.html
+++ b/profile.html
@@ -775,37 +775,12 @@
                 <!-- Roadmap Section -->
                 <div>
                     <h3 class="profile-section-title">ROADMAP</h3>
-                    <div class="roadmap__timeline">
-                        <div class="roadmap__item">
-                            <div class="roadmap__node">
-                                <div class="roadmap__icon">🎓</div>
-                            </div>
-                            <div class="roadmap__content">
-                                <span class="roadmap__year">2023 - 3rd Year</span>
-                                <h3 class="roadmap__title">VFXへの転向</h3>
-                                <p class="roadmap__description">2Dデザインからエフェクト制作へ。Unity VFX Graphの基礎習得。</p>
-                            </div>
-                        </div>
-                        <div class="roadmap__item">
-                            <div class="roadmap__node">
-                                <div class="roadmap__icon">🚀</div>
-                            </div>
-                            <div class="roadmap__content">
-                                <span class="roadmap__year">2024 - 4th Year</span>
-                                <h3 class="roadmap__title">チーム開発・インターン経験</h3>
-                                <p class="roadmap__description">ゲームジャムや夏期インターンシップを通じ、実務に近いワークフローを経験。</p>
-                            </div>
-                        </div>
-                        <div class="roadmap__item">
-                            <div class="roadmap__node">
-                                <div class="roadmap__icon">✨</div>
-                            </div>
-                            <div class="roadmap__content">
-                                <span class="roadmap__year">Current</span>
-                                <h3 class="roadmap__title">卒業制作 & 就職活動</h3>
-                                <p class="roadmap__description">心理効果を狙ったエフェクトの研究と実装。ポートフォリオ完成。</p>
-                            </div>
-                        </div>
+                    <div class="roadmap__timeline"
+                        style="display: flex; justify-content: center; align-items: center; min-height: 200px; padding-left: 0; border-left: none; margin-left: 0;">
+                        <p
+                            style="font-family: var(--font-display); font-size: 1.5rem; color: var(--text-muted); letter-spacing: 0.1em; margin: 0;">
+                            COMING SOON...
+                        </p>
                     </div>
                 </div>
             </div>
