Fix footer links and add footer to profile page

--- a/works_detail_cute_beam.html
+++ b/works_detail_cute_beam.html
@@ -2356,10 +2356,10 @@
                     <!-- RM logo removed -->
                 </div>
                 <div class="footer__links">
-                    <a href="#hero" class="footer__link">TOP</a>
-                    <a href="#philosophy" class="footer__link">PHILOSOPHY</a>
-                    <a href="#about" class="footer__link">ABOUT ME</a>
-                    <a href="#works" class="footer__link">WORKS</a>
+                    <a href="preview.html#hero" class="footer__link">TOP</a>
+                    <a href="preview.html#philosophy" class="footer__link">PHILOSOPHY</a>
+                    <a href="preview.html#about" class="footer__link">ABOUT ME</a>
+                    <a href="preview.html#works" class="footer__link">WORKS</a>
                 </div>
                 <div class="footer__socials">
                     <!-- Social icons (placeholder) -->
