--- a/profile.html
+++ b/profile.html
@@ -536,6 +536,61 @@
             color: var(--text-primary);
             font-weight: 500;
         }
+
+        /* ========================================
+       Footer
+       ======================================== */
+        .footer {
+            background: var(--bg-secondary);
+            padding: var(--gap-xl) 0 var(--gap-lg);
+            margin-top: 80px;
+        }
+
+        .footer__content {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            flex-wrap: wrap;
+            gap: var(--gap-lg);
+        }
+
+        .footer__links {
+            display: flex;
+            gap: var(--gap-lg);
+        }
+
+        .footer__link {
+            font-family: var(--font-display);
+            font-size: 0.8rem;
+            text-transform: uppercase;
+            letter-spacing: 0.1em;
+            color: var(--text-secondary);
+            text-decoration: none;
+            transition: 0.3s ease;
+        }
+
+        .footer__link:hover {
+            color: var(--accent-cyan);
+        }
+
+        .footer__divider {
+            height: 1px;
+            background: linear-gradient(to right, transparent, var(--text-muted), transparent);
+            margin: var(--gap-lg) 0;
+        }
+
+        .footer__copyright {
+            text-align: center;
+            font-size: 0.85rem;
+            color: var(--text-muted);
+        }
+
+        @media (max-width: 768px) {
+            .footer__content {
+                flex-direction: column;
+                text-align: center;
+            }
+        }
     </style>
 </head>
 
@@ -786,6 +841,28 @@
             </div>
         </main>
     </div>
+
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="container">
+            <div class="footer__content">
+                <div class="footer__brand">
+                    <!-- RM logo removed -->
+                </div>
+                <div class="footer__links">
+                    <a href="preview.html#hero" class="footer__link">TOP</a>
+                    <a href="preview.html#philosophy" class="footer__link">PHILOSOPHY</a>
+                    <a href="preview.html#about" class="footer__link">ABOUT ME</a>
+                    <a href="preview.html#works" class="footer__link">WORKS</a>
+                </div>
+                <div class="footer__socials">
+                    <!-- Social icons (placeholder) -->
+                </div>
+            </div>
+            <div class="footer__divider"></div>
+            <p class="footer__copyright">© 2025 Ryushin Mano. All rights reserved.</p>
+        </div>
+    </footer>
     <script>
         // Clock Function
         function updateClock() {
